err/plone.recipe.osxcontroller.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plone'...
Listing './lib/python3.5/site-packages/plone/recipe'...
Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller'...
Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app'...
Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents'...
Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/MacOS'...
Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources'...
Compiling './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/PloneController.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/PloneController.py", line 13
    print "wx.version:", wx.version()
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/config.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/config.py", line 31
    raise ValueError, "No username"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/images'...
Compiling './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/status.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/status.py", line 22
    print "getStatus called"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/statusPage.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/statusPage.py", line 81
    print "Status button pushed"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/statusPosix.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/osxcontroller/PloneController.app/Contents/Resources/statusPosix.py", line 14
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plone/recipe/osxcontroller/__init__.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/osxcontroller/__init__.py", line 25
    os.chmod(os.path.join(bin1,'Contents','MacOS','PloneController'), 0755)
                                                                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/plone/recipe/osxcontroller/tests'...
Listing './lib/python3.5/site-packages/plone.recipe.osxcontroller-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
